force-app/main/default/objects/High_Priority_Case__c/High_Priority_Case__c.object-meta.xml
<CustomObject>
    <label>High Priority Case</label>
    <nameField>
        <label>High Priority Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>High Priority Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>