force-app/main/default/objects/High_Priority_Case__c/fields/Begining_Date__c.field-meta.xml
<CustomField>
    <fullName>Begining_Date__c</fullName>
    <label>Begining Date</label>
    <type>Date</type>
</CustomField>