force-app/main/default/objects/High_Priority_Case__c/fields/Endining_Date__c.field-meta.xml
<CustomField>
    <fullName>Endining_Date__c</fullName>
    <label>Endining Date</label>
    <type>Date</type>
</CustomField>