force-app/main/default/objects/High_Priority_Case__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring Manager</label>
    <referenceTo>Hiring_Manager__c</referenceTo>
    <relationshipLabel>High Priority Cases</relationshipLabel>
    <relationshipName>High_Priority_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>