force-app/main/default/objects/High_Priority_Case__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>